recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
var steps
var length
while (steps!=0) {
	avance(length)
	gauche(angle)
	steps-=1
	lengh+=increment
}
spiral(steps,angle,length,increment)
}
